src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root,
.nlds-theme {
  /* Override pixel values from Figma */
  --utrecht-heading-1-line-height: 1.1;
  --utrecht-heading-2-line-height: 1.3;
  --utrecht-heading-3-line-height: 1.3;
  --utrecht-heading-4-line-height: 1.4;
  --nlds-blog-post-footer-background-color: #f2ebe4;
  --nlds-navbar-link-active-border-color: white;
  --nlds-sidebar-menu-item-active-border-color: white;
  --nlds-code-block-background-color: #011627;
  --utrecht-space-around: 1;
  --utrecht-button-group-margin-block-start: 1em;
  --utrecht-form-field-margin-block-end: 1em;
  --utrecht-button-group-inline-gap: 0.25em;
  --utrecht-form-field-error-message-color: darkred;
  --utrecht-form-control-max-inline-size: 20em;
  --utrecht-form-control-border-width: 1px;
  --utrecht-textbox-padding-block-start: 0.5em;
  --utrecht-textbox-padding-block-end: 0.5em;
  --utrecht-textbox-padding-inline-start: 0.5em;
  --utrecht-textbox-padding-inline-end: 0.5em;
  --utrecht-form-fieldset-legend-font-weight: 700;
  --utrecht-form-label-font-weight: 700;
  --utrecht-form-field-error-message-margin-block-start: 0;
  --utrecht-form-field-error-message-margin-block-end: 1em;
  --utrecht-form-field-description-margin-block-start: 0;
  --ifm-container-width: 1030px;
  --ifm-container-width-xl: 1080px;
  --ifm-link-hover-color: currentColor;
  --utrecht-heading-2-margin-block-start: 32px;
  --utrecht-checkbox-size: 32px;
  --utrecht-checkbox-checked-background-color: green;
  --utrecht-accordion-panel-padding-block-end: 24px;
  --utrecht-accordion-panel-padding-block-start: 0;
  --utrecht-accordion-panel-padding-inline-end: 16px;
  --utrecht-accordion-panel-padding-inline-start: 16px;
  --utrecht-accordion-button-gap: 16px;
  --utrecht-form-toggle-width: 2.5em;
  --utrecht-form-toggle-height: 1.5em;
  --utrecht-form-toggle-thumb-min-inline-size: 0.8em;
  --utrecht-form-toggle-thumb-margin-inline-start: 0.2em;
  --utrecht-form-toggle-thumb-margin-inline-end: 0.2em;
  --utrecht-form-toggle-accent-color: grey;
  --utrecht-form-toggle-checked-accent-color: green;
  --utrecht-form-toggle-thumb-background-color: white;
  --utrecht-form-toggle-track-border-radius: 2em;
  -moz-osx-font-smoothing: auto !important;
}

.utrecht-form-field--checkbox {
  align-items: center;
}

.utrecht-breadcrumb-nav {
  margin-block-end: var(--utrecht-breadcrumb-nav-margin-block-end, 20px);
}

.container--narrow {
  --ifm-container-width: 784px;
  --ifm-container-width-xl: var(--ifm-container-width);
}

.utrecht-unordered-list {
  list-style-type: square;
}

.utrecht-unordered-list .utrecht-unordered-list__item::marker {
  content: "◼";
  font-size: 16px;
}

.button {
  border: none;
  font-size: var(--utrecht-button-font-size);
  line-height: var(--utrecht-button-line-height);
  padding-block-end: var(--utrecht-button-padding-block-end);
  padding-block-start: var(--utrecht-button-padding-block-start);
  padding-inline-end: calc(8px + var(--utrecht-button-icon-size) + var(--utrecht-button-padding-inline-end));
  padding-inline-start: var(--utrecht-button-padding-inline-start);
  position: relative;
}

.button.button--primary {
  --ifm-button-background-color: #148839;
  --ifm-button-color: #fff;

  border-color: #148839;
}

.button--primary::after {
  background-color: #0b732c;
  background-image: url("../icons/arrow-right-white.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 10px 16px;
  bottom: 0;
  content: " ";
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  transition: background-color 0.2s;
  width: var(--gc-button-icon-size);
}

.button.button--primary:hover {
  background-color: #0b732c;
}

.button--primary:hover::after {
  background-color: #055c21;
}

.button.button--secondary {
  color: #004152;
}

.button--secondary::after {
  background-color: #d1dfe3;
  background-image: url("../icons/arrow-right-blue.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 10px 16px;
  bottom: 0;
  content: " ";
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  transition: background-color 0.2s;
  width: 32px;
}

.button.button--secondary:hover {
  background-color: #004152;
  border-color: #004152;
  color: white;
}

.button--secondary:hover::after {
  background-color: #00303d;
  background-image: url("../icons/arrow-right-white.svg");
}

.utrecht-form-field--checkbox > p {
  display: flex;
  gap: 0.5em;
  justify-content: flex-start;
  line-height: 1.4;
}

.utrecht-form-field--checkbox > p .utrecht-checkbox--custom.utrecht-checkbox--html-input:checked {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='22' height='22' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='4' stroke-linecap='round' stroke-linejoin='round' %3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
}

.utrecht-form-field--checkbox label {
  --utrecht-form-label-font-weight: 400;
}

.footer {
  padding-block: 16px;
  width: 100%;
}

.footer--dark {
  --ifm-footer-background-color: #0d1f2a;
  --ifm-footer-color: white;
  --ifm-footer-link-hover-color: white;
}

.footer__items {
  display: grid;
  gap: 36px;
  grid-auto-flow: column;
  justify-content: flex-start;
  list-style: none;
  margin-bottom: 0;
  padding-left: 0;
}

.footer__links {
  justify-content: space-between;
}

.footer__links .col {
  flex: none;
  width: fit-content;
}

.footer__link-item svg {
  display: none;
}

.footer__items {
  display: grid;
  gap: 36px;
  grid-auto-flow: column;
  justify-content: flex-start;
  list-style: none;
  margin-bottom: 0;
  padding-left: 0;
}

.footer__links {
  justify-content: space-between;
}

.footer__links .col {
  flex: none;
  width: fit-content;
}
/* ... */

